Adding title row and activity barto schedule

--- a/app/assets/stylesheets/base/_globals.scss
+++ b/app/assets/stylesheets/base/_globals.scss
@@ -17,9 +17,10 @@ main {
 }
 
 .img-xs{
-  height: 18px;
-  width: 18px;
+  height: 30px;
+  width: 22px;
   margin-right: 10px;
+  padding-bottom: 5px;
 }
 
 .img-live{
