--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -38,7 +38,7 @@
           <div id="eventCurrentdiv" >
               <h3>We're talking about <%= @displayconvo.name %></h3>
               <p> right NOW!   </p>
-              <%= link_to " Join " + @displayconvo.topic, user_viewer_path(@user.permalink, chatrm: @event.topic , event: @event.id), class: "btn btn-primary btn-sm fa fa-video-camera", style: "margin-top: 10px; margin-bottom: 10px; border-radius: 5px; font-size: 40px" %>
+              <%= link_to " Join " + @displayconvo.topic, user_viewer_path(@user.permalink, chatrm: @event.topic , event: @event.id), class: "btn btn-primary btn-sm", style: "margin-top: 10px; margin-bottom: 10px; border-radius: 5px; font-size: 40px" %>
               <br>
           </div>
         <% else %>
