--- a/app/views/layouts/_convocalendar.html.erb
+++ b/app/views/layouts/_convocalendar.html.erb
@@ -8,24 +8,30 @@
 <div class="row">
 
   <div class = "col-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; padding-left: 32px; font-size:140%; color:#8C1D40">
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 32px; font-size:140%; color:#8C1D40">
       <strong>Title</strong>
     </h2>
   </div>
 
   <div class = "col-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; padding-left: 105px; font-size:140%; color:#8C1D40">
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 105px; font-size:140%; color:#8C1D40">
       <strong>Time</strong>
     </h2>
   </div>
 
+  <div class = "col-3" style="color:#000" >
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 125px; font-size:140%; color:#8C1D40">
+      <strong>Activity</strong>
+    </h2>
+  </div>
+
   <div class = "col-xs-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; padding-left: 420px; font-size:140%; color:#8C1D40">
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 110px; font-size:140%; color:#8C1D40">
       <strong>Share</strong>
     </h2>
   </div>
 
-  <div style="width: 94%; margin: auto">
+  <div style="width: 92%; margin: auto">
     <hr>
   </div>
 </div>
@@ -34,7 +40,7 @@
     <% if @conversations.count != 0 %>
       <% @calendar_events.sort_by{|t| t.start_at}.each do |event| %>
           <% user = User.find(event.user_id) %>
-          <div class = "col-3" style="text-align: left; padding-left: 50px; padding-right: 0px">
+          <div class = "col-xs-3" style="text-align: left; padding-left: 50px; padding-right: 50px">
             <%= link_to event.name, event_path(event.id), class: "h4", style: "font-weight:700; color: #222222;", title: event.desc %><br>
             <%= link_to user.name, user.permalink, style:"color:#6c757d" %>
             <% if user_signed_in? %>
@@ -43,7 +49,7 @@
               <% end %>
             <% end %>
           </div>
-          <div class = "col-xs-3" >
+          <div class = "col-xs-3" style="padding-left: 40px; padding-right: 50px">
             <% start_time = event.start_at.strftime("%B %d %Y") + ' ' + event.start_at.strftime("%T") %>
             <% end_time = event.end_at.strftime("%B %d %Y") + ' ' + event.end_at.strftime("%T") %>
             <% if ((Time.current - offset.hours) > Time.find_zone("UTC").parse(start_time) ) && ((Time.current - offset.hours) < Time.find_zone("UTC").parse(end_time)) %>
@@ -52,7 +58,7 @@
             <div style="padding-left: 100px">&nbsp;</div>
             <%end%>
           </div>
-          <div class = "col-3" style="color:#000; text-align: left" >
+          <div class = "col-xs-3" style="color:#000; text-align: left; padding-right: 50px">
             <span style="font-size:125%;" id=convocalendar-time-day<%=i%>></span>
             <br>
             <span style="font-size:90%; color: #6c757d;" id=convocalendar-time<%=i%>></span>
@@ -66,7 +72,50 @@
             document.getElementById('convocalendar-time<%=i%>').innerHTML = date.toLocaleString(undefined, optionsTime);
           </script>
 
-          <div class="col-3" style="margin-top: 6px">
+          <div class="col-xs-3" style="padding-left: 30px">
+              <% rsvps = event.rsvpqs %>
+              <% rsvpusers = event.users %>
+              <% if rsvps.count > 0 %>
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary dropdown-toggle" style="border-radius: 4px; background-color: white; border-color: white; color: #8C1D40" data-toggle="dropdown" aria-haspopup="true" >
+                <span><%= image_tag "person.png", :class => 'img-xs' %></span><span><%= rsvps.count %></span>
+              </button>
+              <div class="dropdown-menu dropdown-menu-right rsvp-dropdown">
+                <% rsvps.each do |rsvp| %>
+                <%if !rsvp.user_id.nil? %>
+                  <% rsvpuser = User.find(rsvp.user_id) %>
+                  <%= link_to user_profile_path(rsvpuser.permalink) do %>
+                    <div class="dropdown-item">
+                      <span>
+                        <% if rsvpuser.profilepic.present? && rsvpuser.profilepic != '' %>
+                          <%= image_tag rsvpuser.profilepic.url.to_s, :class => 'img-xs' %>
+                        <% elsif !rsvpuser.profilepic.url.nil? %>
+                          <% if rsvpuser.profilepic.url.match(/http/) %>
+                            <%= image_tag rsvpuser.profilepic.url, :class => 'img-xs' %>
+                          <% end %>
+                        <% else %>
+                          <%= image_tag "logoDigitalHollow300.png", :class => 'img-xs' %>
+                        <% end %>
+                      </span>
+                      <%= rsvpuser.name %></div>
+                  <% end %>
+                <% end %>
+                <% end %>
+                <% rsvps.each do |rsvp| %>
+                  <% unless rsvp.email.blank? %>
+                    <% parts = rsvp.email.split('@') %>
+                    <div class="dropdown-item"><%= parts[0] %></div>
+                  <% end %>
+                <% end %>
+              </div>
+              </div>
+              <% else %>
+              <div style="padding-left: 92px">&nbsp;</div>
+              <% end %>
+          </div>
+
+
+          <div class="col-xs-3" style="margin-top: 6px; padding-left: 50px; padding-right: 50px">
 
             <% @rsvp = Rsvpq.new %>
             <% start_time = event.start_at.strftime("%B %d %Y") + ' ' + event.start_at.strftime("%T") %>
@@ -115,11 +164,11 @@
                     <% end %>
 
                     <% if flag %>
-                      <%= f.submit "RSVP", :style => "color: #fff; background-color: #880f42; padding: 2px 20px; font-weight: normal; border-radius:4px; border-style: none", :id => "RSVPsubmit" %>
+                      <%= f.submit "RSVP", :style => "color: #8C1D40; background-color: white; border-color: #8C1D40; margin-top: 2px; padding: 2px 20px; font-weight: normal; border-radius:4px; border: 1px solid", :id => "RSVPsubmit" %>
                     <% end %>
                   <% else %>
                     <%= f.text_field :email, :style => "border: 1px solid grey; border-radius: 0px;", placeholder: "Enter email", :class =>"enter_email" %>
-                    <%= f.submit "RSVP", :style => "color: #fff; background-color: #880f42; padding: 2px 20px; font-weight: normal; border-radius:4px; border-style: none", :id => "RSVPsubmit" %>
+                    <%= f.submit "RSVP", :style => "color: #8C1D40; background-color: white; border-color: #8C1D40; margin-top: 2px; padding: 2px 20px; font-weight: normal; border-radius:4px; border: 1px solid", :id => "RSVPsubmit" %>
                   <% end %>
                 <% end %>
             <% end %>
