--- a/app/views/layouts/_weeklycalendar.html.erb
+++ b/app/views/layouts/_weeklycalendar.html.erb
@@ -1,9 +1,9 @@
 <br>
 
-<div class="container-fluid">
+<div class="container-fluid" style="height:70px">
   <div class="row justify-content-center" style="position:relative; bottom:35px; width: 100%; margin: auto; padding-bottom:25px; background-color: #8c1d40">
     <% getWeekDays.each_with_index do |date, index|%>
-    <button onclick="Panel1(<%=index%>,'#900C3F')" class="btn btn-primary-week weekBtn" style="border-color: #ffffff;border-width: thin;">
+    <button onclick="Panel1(<%=index%>,'#900C3F')" class="btn btn-primary-week weekBtn" style="border-color: #ffffff;border-width: thin; width: 12%;">
       <%=date.strftime("%A")%><br><%= date.month%><%= "/" %><%= date.day %>
     </button>
     <%end%>
