changed sizes to adjust with changes of resolution

--- a/app/views/layouts/_convocalendar.html.erb
+++ b/app/views/layouts/_convocalendar.html.erb
@@ -7,26 +7,26 @@
 <br>
 <div class="row">
 
-  <div class = "col-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 32px; font-size:140%; color:#8C1D40">
+  <div class = "col-4" style="color:#000; margin-right: 5.5%" >
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 7%; font-size:140%; color:#8C1D40">
       <strong>Title</strong>
     </h2>
   </div>
 
-  <div class = "col-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 105px; font-size:140%; color:#8C1D40">
+  <div class = "col-2" style="color:#000; margin-right:5%" >
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; font-size:140%; color:#8C1D40">
       <strong>Time</strong>
     </h2>
   </div>
 
-  <div class = "col-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 125px; font-size:140%; color:#8C1D40">
+  <div class = "col-2" style="color:#000; margin-right:5%" >
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; font-size:140%; color:#8C1D40">
       <strong>Activity</strong>
     </h2>
   </div>
 
   <div class = "col-xs-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 20px; font-size:140%; color:#8C1D40">
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; font-size:140%; color:#8C1D40">
       <strong>Share</strong>
     </h2>
   </div>
@@ -40,7 +40,7 @@
     <% if @conversations.count != 0 %>
       <% @calendar_events.sort_by{|t| t.start_at}.each do |event| %>
           <% user = User.find(event.user_id) %>
-          <div class = "col-xs-3" style="text-align: left; padding-left: 50px; padding-right: 50px">
+          <div class = "col-xs-3" style="text-align: left; padding-left: 4%; width: 30%">
             <%= link_to event.name, event_path(event.id), class: "h4", style: "font-weight:700; color: #222222;", title: event.desc %><br>
             <%= link_to user.name, user.permalink, style:"color:#6c757d" %>
             <% if user_signed_in? %>
@@ -49,7 +49,7 @@
               <% end %>
             <% end %>
           </div>
-          <div class = "col-xs-3" style="padding-left: 40px; padding-right: 50px">
+          <div class = "col-xs-3" style="width: 10%; min-width: 70px">
             <% start_time = event.start_at.strftime("%B %d %Y") + ' ' + event.start_at.strftime("%T") %>
             <% end_time = event.end_at.strftime("%B %d %Y") + ' ' + event.end_at.strftime("%T") %>
             <% if ((Time.current - offset.hours) > Time.find_zone("UTC").parse(start_time) ) && ((Time.current - offset.hours) < Time.find_zone("UTC").parse(end_time)) %>
@@ -58,7 +58,7 @@
             <div style="padding-left: 100px">&nbsp;</div>
             <%end%>
           </div>
-          <div class = "col-xs-3" style="color:#000; text-align: left; padding-right: 50px">
+          <div class = "col-xs-3" style="color:#000; text-align: left; width: 20%">
             <span style="font-size:125%;" id=convocalendar-time-day<%=i%>></span>
             <br>
             <span style="font-size:90%; color: #6c757d;" id=convocalendar-time<%=i%>></span>
@@ -72,7 +72,7 @@
             document.getElementById('convocalendar-time<%=i%>').innerHTML = date.toLocaleString(undefined, optionsTime);
           </script>
 
-          <div class="col-xs-3" style="padding-left: 30px">
+          <div class="col-xs-3" style="width:10%">
               <% rsvps = event.rsvpqs %>
               <% rsvpusers = event.users %>
               <% if rsvps.count > 0 %>
@@ -115,7 +115,7 @@
           </div>
 
 
-          <div class="col-xs-3" style="margin-top: 6px; padding-left: 50px; padding-right: 50px">
+          <div class="col-xs-3" style="margin-top: 6px; width: 10%">
 
             <% @rsvp = Rsvpq.new %>
             <% start_time = event.start_at.strftime("%B %d %Y") + ' ' + event.start_at.strftime("%T") %>
@@ -175,7 +175,7 @@
           </div>
 
           <!-- Share Buttons -->
-          <div class = "col-xs-3" style="margin-top: 12px">
+          <div class = "col-xs-3" style="margin-top: 12px; width: 15%">
             <% domainurl = "http://www.thinq.tv/"%>
 
             <!-- Facebook Share -->
