--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -96,6 +96,7 @@
     margin-bottom: 9px !important;
     float: right;
     font-weight: bold !important;
+    font-size: 100% !important;
   }
 
   .btn-join {
