--- a/app/assets/stylesheets/styles/_panels.scss
+++ b/app/assets/stylesheets/styles/_panels.scss
@@ -139,7 +139,7 @@
   cursor: pointer;
   padding: 10px;
   font-family: sans-serif;
-  font-size: 18px;
+  font-size: 120%;
   font-weight: bold;
   background-color: #8C1D40;
   color: white;
@@ -159,7 +159,7 @@
   cursor: pointer;
   padding: 10px;
   font-family: sans-serif;
-  font-size: 18px;
+  font-size: 120%;
   font-weight: bold;
   background-color: #8C1D40;
   color: white;
