--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,13 +2,13 @@
 
   <div class="col-lg-5 pt-3 pb-4 pl-5 ml-3">
   <% flash.each do |key, value| %>
-      <div class="<%= flash_class(key) %>" style = "height:50px">
+      <div class="<%= flash_class(key) %>"style = "height:50px">
         <%= value %>
       </div>
     <% end %>
-    <h1 class="text-center text-white mt-5 pl-5 pt-5" style="text-align: left !important; padding-left: 0rem !important; margin: 0rem !important; font-size:375%">
+    <h1 class="text-center text-white mt-5 pl-5 pt-5" style="text-align: left !important; padding-left: 0rem !important; margin: 0rem !important; font-size:300%">
       <strong>Conversations to make you</strong>
-        <%= image_tag("GoldThinQ60.png", style: "transform: translate(0px, -8px);")%>
+        <%= image_tag("GoldThinQ60.png", style: "width: 30%; transform: translate(0%, -11%);")%>
     </h1>
     <br>
     <h2 class="text-center text-white" style="text-align: left !important; font-size:105%; font-weight: normal; line-height: 1.8">
@@ -50,7 +50,7 @@
     <div class="col-lg-6 col-md-12 col-sm-12 pt-2" style="padding-top: 1rem !important">
       <!--conversations column-->
       <%= image_tag("convo_photo.png", class:"mx-auto d-block pb-3", style: "border-radius: 112px; width: 50%;")%>
-      <h1 class="text-center" style="font-size: 32px"><strong>Conversations</strong>
+      <h1 class="text-center" style="font-size: 200%"><strong>Conversations</strong>
       </h1>
       <hr class="black-divider" style="width: 34%">
       <p class = "text-center" style="margin: auto; width: 55%">
@@ -67,7 +67,7 @@
     <div class="col-lg-6 col-md-12 col-sm-12 pb-5 pt-3 mt-3" style="margin-top: 0rem !important">
       <!--study hall column; col-md-6 col-lg-6 col-sm-12 col-xs-12-->
       <%= image_tag("activism_hall.jpg", class:" mx-auto d-block  pb-3", style: "border-radius:112px; width:50%;")%>
-      <h1 class="text-center" style="font-size: 32px"><strong>Study Hall</strong>
+      <h1 class="text-center" style="font-size: 200%"><strong>Study Hall</strong>
       </h1>
       <hr class="black-divider" style="width: 24%">
       <p class = "text-center" style="margin: auto; margin-bottom: 50px; width: 55%">
@@ -91,12 +91,12 @@
       </div>
 
       <div class="tabContainer text-center" style="background-color: #8C1D40; padding-right: 0.2rem; padding-left: 0.2rem; padding-bottom: 0.2rem" >
-        <div class="buttonContainer pr-3" >
-          <button onclick="showPanel(0,'#4caf50')" style="position: relative; right: 3.5rem;">List View</button>
-          <button onclick="showPanel(1,'#4caf50')" style="position: relative; right: 3.5rem;">Daily View</button>
-          <button onclick="showPanel(2,'#4caf50')" style="position: relative; right: 3.5rem;">Monthly View</button>
+        <div class="buttonContainer pl-3 pr-3" >
+          <button onclick="showPanel(0,'#4caf50')" style="float: left; width: 20%; height:65px">List View</button>
+          <button onclick="showPanel(1,'#4caf50')" style="float: left; width: 20%; height:65px">Daily View</button>
+          <button onclick="showPanel(2,'#4caf50')" style="float: left; width: 20%; height:65px">Monthly View</button>
           <% if user_signed_in? %>
-            <%= link_to 'Post your Own Conversation', new_event_path, class: "btn btn-warning", title: "Host drop-in conversation sessions or invite people to ask questions about your area of expertise", style: "padding-top: 11px !important" %>
+            <%= link_to 'Post your Own Conversation', new_event_path, class: "btn btn-warning", title: "Host drop-in conversation sessions or invite people to ask questions about your area of expertise", style: "padding-top: 11px !important; width: 20%; height:65px; line-height: 250%" %>
           <% end %>
         </div>
 
