--- a/app/views/layouts/_convocalendar.html.erb
+++ b/app/views/layouts/_convocalendar.html.erb
@@ -5,6 +5,7 @@
 <% offset = -1 * Time.now.in_time_zone("Pacific Time (US & Canada)").gmt_offset/3600%>
 <%i = 0%>
 <br>
+<div style="overflow-x:auto; width: 100%">
 <div class="row">
 
   <div class = "col-4" style="color:#000; margin-right: 5.5%" >
@@ -72,49 +73,6 @@
             document.getElementById('convocalendar-time<%=i%>').innerHTML = date.toLocaleString(undefined, optionsTime);
           </script>
 
-          <div class="col-xs-3" style="width:10%">
-              <% rsvps = event.rsvpqs %>
-              <% rsvpusers = event.users %>
-              <% if rsvps.count > 0 %>
-            <div class="btn-group">
-              <button type="button" class="btn btn-primary dropdown-toggle" style="border-radius: 4px; background-color: white; border-color: white; color: #8C1D40" data-toggle="dropdown" aria-haspopup="true" >
-                <span><%= image_tag "person.png", :class => 'img-xs' %></span><span><%= rsvps.count %></span>
-              </button>
-              <div class="dropdown-menu dropdown-menu-right rsvp-dropdown">
-                <% rsvps.each do |rsvp| %>
-                <%if !rsvp.user_id.nil? %>
-                  <% rsvpuser = User.find(rsvp.user_id) %>
-                  <%= link_to user_profile_path(rsvpuser.permalink) do %>
-                    <div class="dropdown-item">
-                      <span>
-                        <% if rsvpuser.profilepic.present? && rsvpuser.profilepic != '' %>
-                          <%= image_tag rsvpuser.profilepic.url.to_s, :class => 'img-xs' %>
-                        <% elsif !rsvpuser.profilepic.url.nil? %>
-                          <% if rsvpuser.profilepic.url.match(/http/) %>
-                            <%= image_tag rsvpuser.profilepic.url, :class => 'img-xs' %>
-                          <% end %>
-                        <% else %>
-                          <%= image_tag "logoDigitalHollow300.png", :class => 'img-xs' %>
-                        <% end %>
-                      </span>
-                      <%= rsvpuser.name %></div>
-                  <% end %>
-                <% end %>
-                <% end %>
-                <% rsvps.each do |rsvp| %>
-                  <% unless rsvp.email.blank? %>
-                    <% parts = rsvp.email.split('@') %>
-                    <div class="dropdown-item"><%= parts[0] %></div>
-                  <% end %>
-                <% end %>
-              </div>
-              </div>
-              <% else %>
-              <div style="padding-left: 92px">&nbsp;</div>
-              <% end %>
-          </div>
-
-
           <div class="col-xs-3" style="margin-top: 6px; width: 10%">
 
             <% @rsvp = Rsvpq.new %>
@@ -174,6 +132,48 @@
             <% end %>
           </div>
 
+          <div class="col-xs-3" style="width:10%">
+              <% rsvps = event.rsvpqs %>
+              <% rsvpusers = event.users %>
+              <% if rsvps.count > 0 %>
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary dropdown-toggle" style="border-radius: 4px; background-color: white; border-color: white; color: #8C1D40" data-toggle="dropdown" aria-haspopup="true" >
+                <span><%= image_tag "person.png", :class => 'img-xs' %></span><span><%= rsvps.count %></span>
+              </button>
+              <div class="dropdown-menu dropdown-menu-right rsvp-dropdown">
+                <% rsvps.each do |rsvp| %>
+                <%if !rsvp.user_id.nil? %>
+                  <% rsvpuser = User.find(rsvp.user_id) %>
+                  <%= link_to user_profile_path(rsvpuser.permalink) do %>
+                    <div class="dropdown-item">
+                      <span>
+                        <% if rsvpuser.profilepic.present? && rsvpuser.profilepic != '' %>
+                          <%= image_tag rsvpuser.profilepic.url.to_s, :class => 'img-xs' %>
+                        <% elsif !rsvpuser.profilepic.url.nil? %>
+                          <% if rsvpuser.profilepic.url.match(/http/) %>
+                            <%= image_tag rsvpuser.profilepic.url, :class => 'img-xs' %>
+                          <% end %>
+                        <% else %>
+                          <%= image_tag "logoDigitalHollow300.png", :class => 'img-xs' %>
+                        <% end %>
+                      </span>
+                      <%= rsvpuser.name %></div>
+                  <% end %>
+                <% end %>
+                <% end %>
+                <% rsvps.each do |rsvp| %>
+                  <% unless rsvp.email.blank? %>
+                    <% parts = rsvp.email.split('@') %>
+                    <div class="dropdown-item"><%= parts[0] %></div>
+                  <% end %>
+                <% end %>
+              </div>
+              </div>
+              <% else %>
+              <div style="padding-left: 92px">&nbsp;</div>
+              <% end %>
+          </div>
+
           <!-- Share Buttons -->
           <div class = "col-xs-3" style="margin-top: 12px; width: 15%">
             <% domainurl = "http://www.thinq.tv/"%>
@@ -222,3 +222,5 @@
     $('[data-toggle="tooltip"]').tooltip()
   })
 </script>
+
+</div>
