New images, button styling

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,16 +9,16 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" style="margin-right: 30px; margin-left: 30px">
 
-        <a class="nav-link text-white" id="navLink" href="/">Home</a>
+        <a class="nav-link text-white" id="navLink" href="/"><strong>Home</strong></a>
       </li>
       <li class="nav-item" style="margin-right: 30px">
-        <a class="nav-link text-white" id="navLink" href="/getinvolved">About Us</a>
+        <a class="nav-link text-white" id="navLink" href="/getinvolved"><strong>About Us</strong></a>
       </li>
       <li class="nav-item" style="margin-right: 30px">
-        <a class="nav-link text-white" id="navLink" href="/jointheteam">Join the Team</a>
+        <a class="nav-link text-white" id="navLink" href="/jointheteam"><strong>Join the Team</strong></a>
       </li>
-      <li class="nav-item" style="margin-right: 20px">
-        <a class="nav-link text-white" href="/studyhall">Schedule</a>
+      <li class="nav-item" style="margin-right: 30px">
+        <a class="nav-link text-white" id="navLink" href="/studyhall"><strong>Schedule Drop-In</strong></a>
       </li>
     </ul>
 
