--- a/app/views/layouts/_renderdayhome.html.erb
+++ b/app/views/layouts/_renderdayhome.html.erb
@@ -4,26 +4,26 @@
 
 <div class="row">
 
-  <div class = "col-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 10px; font-size:140%; color:#8C1D40">
+  <div class = "col-4" style="color:#000; margin-right: 5.5%" >
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 7%; font-size:140%; color:#8C1D40">
       <strong>Title</strong>
     </h2>
   </div>
 
-  <div class = "col-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 110px; font-size:140%; color:#8C1D40">
+  <div class = "col-2" style="color:#000; margin-right:5%" >
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; font-size:140%; color:#8C1D40">
       <strong>Time</strong>
     </h2>
   </div>
 
-  <div class = "col-xs-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 160px; font-size:140%; color:#8C1D40">
+  <div class = "col-2" style="color:#000; margin-right:5%" >
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; font-size:140%; color:#8C1D40">
       <strong>Activity</strong>
     </h2>
   </div>
 
   <div class = "col-xs-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; padding-left: 195px; font-size:140%; color:#8C1D40">
+    <h2 class="text-center" style="text-align: left !important; margin-bottom:0px; font-size:140%; color:#8C1D40">
       <strong>Share</strong>
     </h2>
   </div>
