--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -101,8 +101,8 @@
 
   .btn-join {
       color: $brand-primary !important;
-      background-color: $brand-secondary !important;
-      border-color: $brand-secondary !important;
+      background-color: #FFB704 !important;
+      border-color: #FFB704 !important;
       padding-top: 9px !important;
       margin-right: 0px !important;
       margin-top: 7px !important;
@@ -112,6 +112,13 @@
       width: 48%;
       float: right;
     }
+
+  .btn-join:hover {
+    color: #ffffff !important;
+    background-color: #FFB704 !important;
+    border-spacing: 10px;
+    border-color: black;
+  }
 
   .btn-learn {
       color: $brand-white !important;
@@ -125,6 +132,12 @@
       width: 48%;
       float: left;
     }
+
+  .btn-learn:hover {
+      color: #8C1D40 !important;
+      background-color: #ffffff !important;
+      border-color: #ffffff;
+  }
 
   .btn-countdown {
       color: #ffffff !important;
