--- a/app/views/layouts/_renderday.html.erb
+++ b/app/views/layouts/_renderday.html.erb
@@ -1,36 +1,36 @@
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0"></script>
 <% offset = -1 * Time.now.in_time_zone("Pacific Time (US & Canada)").gmt_offset/3600%>
 <%eventCount = 0%>
-<div class="panel panel-default table-responsive">
+<div style="overflow-x:auto; width: 100%">
 <div class="row">
 
-  <div class = "col-xs-3" style="color:#000; padding-right:0px" >
-    <h2 class="text-center" style="text-align: left !important; padding-left: 30px; font-size:140%; color:#8C1D40">
+  <td class = "col-xs-2" style="color:#000; padding-left:2.2%; width:34.5%" >
+    <h2 class="text-center" style="text-align: left !important; font-size:140%; color:#8C1D40; padding-left:2.2%;  width:34.5%">
       <strong>Title</strong>
     </h2>
-  </div>
+  </td>
 
-  <div class = "col-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; padding-left: 265px; font-size:140%; color:#8C1D40">
+  <td class = "col-xs-2" style="color:#000; width:21.5%" >
+    <h2 class="text-center" style="text-align: left !important; font-size:140%; color:#8C1D40; width:21.5%">
       <strong>Time</strong>
     </h2>
-  </div>
+  </td>
 
-  <div class = "col-xs-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; padding-left: 260px; font-size:140%; color:#8C1D40">
+  <td class = "col-xs-2" style="color:#000; width:22.5%" >
+    <h2 class="text-center" style="text-align: left !important; font-size:140%; color:#8C1D40; width:22.5%">
       <strong>Activity</strong>
     </h2>
-  </div>
+  </td>
 
-  <div class = "col-xs-3" style="color:#000" >
-    <h2 class="text-center" style="text-align: left !important; padding-left: 295px; font-size:140%; color:#8C1D40">
+  <td class = "col-xs-2" style="color:#000; width:20%" >
+    <h2 class="text-center" style="text-align: left !important; font-size:140%; color:#8C1D40; width:20%">
       <strong>Share</strong>
     </h2>
-  </div>
+  </td>
 
 </div>
 
-<div class="panel panel-default border-right border-left border-top table-responsive">
+<div class="panel panel-default border-right border-left border-top">
   <% if @calendar_events_all.count != 0 %>
     <table class="table table-hover" id=calendar>
       <tbody>
@@ -40,7 +40,7 @@
             <% user = User.find(event.user_id) %>
             <tr>
 
-              <td class=col-xs-2 style="font-size: 17px">
+              <td class=col-xs-2 style="font-size: 17px; width:20%">
                 <% rsvpeople = "" %>
                 <strong><%= event.topic%></strong><br>
                 <%= link_to user.name, user.permalink, title: rsvpeople, style: "font-size: 14px;  color: #6c757d" %>
@@ -52,7 +52,7 @@
                 <% end %>
               </td>
 
-              <td class=col-xs-2>
+              <td class=col-xs-2 style="width:10%">
               <% start_time = event.start_at.strftime("%B %d %Y") + ' ' + event.start_at.strftime("%T") %>
               <% end_time = event.end_at.strftime("%B %d %Y") + ' ' + event.end_at.strftime("%T") %>
               <% if ((Time.current - offset.hours) > Time.find_zone("UTC").parse(start_time) ) && ((Time.current - offset.hours) < Time.find_zone("UTC").parse(end_time)) %>
@@ -62,7 +62,7 @@
               <%end%>
               </td>
 
-              <td class=col-xs-2>
+              <td class=col-xs-2 style="width:20%">
                 <% rsvpusers = event.users %>
 
                 <% dayId = "week-day-#{currentDate.strftime('%A')}-#{i}"%>
@@ -81,7 +81,7 @@
                 document.getElementById('<%=timeId%>').innerHTML = date.toLocaleString(undefined, optionsHour);
               </script>
 
-              <td class=col-xs-2>
+              <td class=col-xs-2 style="width:10%">
                 <% @rsvp = Rsvpq.new %>
                 <% start_time = event.start_at.strftime("%B %d %Y") + ' ' + event.start_at.strftime("%T") %>
                 <% end_time = event.end_at.strftime("%B %d %Y") + ' ' + event.end_at.strftime("%T") %>
@@ -153,7 +153,7 @@
                 <% end %>
               </td>
 
-              <td class="col-xs-2">
+              <td class="col-xs-2" style="width:10%">
                 <% rsvps = event.rsvpqs %>
                 <% rsvpusers = event.users %>
                 <% if rsvps.count > 0 %>
@@ -195,7 +195,7 @@
               </td>
 
               <!-- Share Buttons -->
-              <td class=col-xs-2>
+              <td class=col-xs-2 style="width:20%">
                 <% domainurl = "https://thinq.tv/" %>
 
                 <!-- Facebook Share -->
@@ -246,4 +246,5 @@
     $('[data-toggle="tooltip"]').tooltip()
   })
 </script>
+
 </div>
