Home page button styling, social media image change, navbar style

--- a/app/assets/stylesheets/base/_footer.scss
+++ b/app/assets/stylesheets/base/_footer.scss
@@ -21,6 +21,11 @@ footer a.f-link{
     color: white ; //was light grey, changed to white
 }
 
+.f-link:hover {
+  color: #ffffff !important;
+  text-decoration: underline !important;
+}
+
 footer p.f-header{
   color: $brand-secondary;
   font-size: 14px;
